[gd_scene load_steps=20 format=3 uid="uid://s8oeh6vhj774"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_f62k0"]
[ext_resource type="Texture2D" uid="uid://c83fnwtbfuj21" path="res://Player/doomguy.png" id="2_2qw70"]
[ext_resource type="Texture2D" uid="uid://noq54m526sa7" path="res://Player/player.png" id="2_mj8sk"]
[ext_resource type="Texture2D" uid="uid://b4qpivys1vlga" path="res://Aim/aim.png" id="3_p3ujd"]
[ext_resource type="Texture2D" uid="uid://25wsj037sv7t" path="res://Player/doomguy_sheet.png" id="5_hxfjn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5vae8"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pil8w"]
size = Vector2(17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_5by7x"]
atlas = ExtResource("5_hxfjn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvw27"]
atlas = ExtResource("5_hxfjn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5ktg"]
atlas = ExtResource("5_hxfjn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_scmfr"]
atlas = ExtResource("5_hxfjn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7s8l"]
atlas = ExtResource("5_hxfjn")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_33ayo"]
atlas = ExtResource("5_hxfjn")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8e35"]
atlas = ExtResource("5_hxfjn")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc6bs"]
atlas = ExtResource("5_hxfjn")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed71h"]
atlas = ExtResource("5_hxfjn")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgotl"]
atlas = ExtResource("5_hxfjn")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8spjj"]
atlas = ExtResource("5_hxfjn")
region = Rect2(32, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hjgfu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5by7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvw27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5ktg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scmfr")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7s8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33ayo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8e35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc6bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed71h")
}],
"loop": false,
"name": &"shoot",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgotl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8spjj")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(1.5, 1.5)
motion_mode = 1
script = ExtResource("1_f62k0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5vae8")
debug_color = Color(0, 0.596078, 0.721569, 0.419608)

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_pil8w")

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2(11.3333, 7.33333)

[node name="Aim" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(74.6667, 0)
texture = ExtResource("3_p3ujd")

[node name="Laser" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0, 0, 0.156863)
position = Vector2(42.6667, 0)
scale = Vector2(4, 0.1)
texture = ExtResource("2_mj8sk")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.313726)
z_index = -5
position = Vector2(-2, -2)
texture = ExtResource("2_2qw70")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_2qw70")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(6, -2.38419e-07)
rotation = 1.57079
sprite_frames = SubResource("SpriteFrames_hjgfu")
animation = &"shoot"
autoplay = "idle"

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
